--- a/first_playbook.yml
+++ b/first_playbook.yml
@@ -1,11 +1,6 @@
----
-
-- name: Network Getting Started First Playbook
-  connection: network_cli
-  gather_facts: false
-  hosts: all
+- hosts: all
+  order: sorted
+  gather_facts: False
   tasks:
-
-    - name: Display the config
-      debug:
-        msg: "The hostname is {{ ansible_net_hostname }} and the OS is {{ ansible_net_version }}"
+    - debug:
+        var: inventory_hostname
